Fix text alignment for case study page.

--- a/static/css/agency.css
+++ b/static/css/agency.css
@@ -472,6 +472,10 @@ section h3.section-subheading {
     text-decoration: underline;
 }
 
+.casestudy-heading {
+  text-align: center
+}
+
 #portfolio .portfolio-item {
     right: 0;
     margin: 30px auto;
@@ -1006,7 +1010,7 @@ ul.social-buttons li a:active {
     min-height: 100%;
     border: 0;
     border-radius: 0;
-    text-align: justify;
+    text-align: left;
     background-clip: border-box;
     -webkit-box-shadow: none;
     box-shadow: none;
